# near-subaccounts

./: .gitignore  Cargo.toml
src/: main.rs
