[package]
name = "near-subaccounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1"
serde_json = "1"
env_logger = "0.9"
log = "0.4"
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls", "decimal"]}
futures = "0.3"
rust_decimal = "1.22"